# spinbox

./: .gitignore  .pdm-python  CITATION.cff  LICENSE  README.md  _pyproject.toml  conf.py  dev.env  hello.py  index.rst  ip_statement.txt  pyproject.toml  quap.py  requirements.txt  setup.py  test_0.py  test_1.py  tests_0.py
examples/: afdmc_avg.py  afdmc_fixed.py  averaging.py  averaging_3b.py  basis_comparison.py  basis_comparison_3b.py  basis_comparison_v2.py  commutators.py  entanglement.py  example_code_for_slide.py  fort.770  fort.7701  fort.7702  fort.7703  fort.775  gfmc_avg.py  gfmc_avg_new.py  gfmc_fixed.py  mbb_ls_test.py  mbbprop.py  mbbprop_2H.py  mbbprop_averaging.py  mbbprop_averaging_lstest.py  mbbprop_avg.py  mbbprop_avg_lstest.py  mbbprop_fixed.py  mbbprop_h2.py  mbbprop_iso.py  mbbprop_ls.py  mbbprop_nuc.out  mbbprop_nuc.py  mbbprop_nuc_ls.py  mbprop.py  mbprop_iso.py  multiproc_test.py  nuclear.py  nuctest.py  obbprop.py  obbprop_2H.py  obbprop_avg_OLD.py  (+30 more)
quap/: __init__.py  core.py
quap.egg-info/: PKG-INFO  SOURCES.txt
research/: averaging.py  averaging_3b.py  basis_comparison_v2.py  tensor_work.ipynb  testing.ipynb  threebody_v2.py
spinbox/: core.py
storage/: afdmc_avg.py  afdmc_avg_OLD.py  afdmc_fixed.py  averaging_backup.py  basis_comparison.py  basis_comparison_OLD.py  commutators.py  core_OLD.py  core_backup.py  core_slow.py  entanglement.py  gfmc_fixed.py  mbboptimize.py  mbbprop.py  mbbprop_avg_OLD.py  mbbprop_iso.py  mbbprop_nuc_backup.py  obbprop.py  obbprop_avg_OLD.py  obbprop_fixed.py  obbprop_he3.py  obbprop_iso.py  quap_v1.py  (+9 more)
(+144 files in other folders)
