[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quap"
version = "0.4"
authors = [
  { name="Jordan M. R. Fox", email="jordanmrfox@gmail.com" },
]
description = "Tools for testing nuclear auxiliary field diffusion Monte Carlo"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jmrfox/quap"